# zotero-pdf-processor

./: .gitignore  Dockerfile  README.md  example.env  pyproject.toml
.github/workflows/: build-image.yaml
src/zotero_pdf_processor/: __main__.py  app.py  consts.py  database.py  grobid_driver.py  webhook_driver.py  zotero_driver.py
